0.1.0版本
1   查询支持泳道分离
2   写入支持事务组编排
3   事务组支持泳道分离
4   事务写入通过JTA支持并发
5   rpc通过jta支持最终一致性事务